test_scripts/errors/if_body_undefined.shm
if true { undefined_var; }
