test_scripts/errors/if_body_undefined.stderr
 1 | if true { undefined_var; }
               ^^^^^^^^^^^^^
Error: Unknown identifier "undefined_var"
